--- a/app/src/main/res/layout/buy_activity.xml
+++ b/app/src/main/res/layout/buy_activity.xml
@@ -8,6 +8,7 @@
         android:id="@+id/icon"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         app:srcCompat="@mipmap/ic_launcher" />
 
     <TextView
@@ -15,21 +16,32 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity = "center_horizontal"
-        android:textSize="20dp"
-        android:text="title" />
+        android:textSize="20sp"
+        android:text="title"
+        android:layout_marginTop="10dp"/>
+
+    <TextView
+        android:id="@+id/content"
+        android:gravity="center_horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:textSize="20sp"
+        android:text="content" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="54dip"
-        android:orientation="horizontal">
+        android:layout_height="54dp"
+        android:orientation="horizontal"
+        android:layout_marginTop ="20sp">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:textSize="20sp"
-            android:textAlignment="center"
-            android:text="@string/qty" />
+            android:gravity="center"
+            android:text="@string/qty"
+            android:textSize="20sp" />
 
         <EditText
             android:id="@+id/buy_number"
@@ -37,7 +49,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center"
-            android:ems="10"
+            android:ems="5"
             android:inputType="number" />
 
         <Button
@@ -48,12 +60,4 @@
             android:text="Add to Cart" />
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/content"
-        android:gravity="center_horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="5dp"
-        android:textSize="20dp"
-        android:text="content" />
 </LinearLayout>
