--- a/app/src/main/res/layout/cart.xml
+++ b/app/src/main/res/layout/cart.xml
@@ -14,6 +14,7 @@
         android:textSize="20sp"
         android:textStyle="bold" >
     </TextView>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -50,9 +51,10 @@
         android:background="#DFDCDC"
         android:clickable="true"
         android:drawSelectorOnTop="true"
-        android:padding="5px"
+        android:padding="5dp"
         android:scrollIndicators="right"
-        android:scrollbars="vertical"></ListView>
+        android:scrollbars="vertical">
+    </ListView>
 
     <!-- Calculate Button - Calculates Total Amount -->
     <Button
@@ -67,7 +69,10 @@
     <TableLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:columnCount="5">
+        android:columnCount="4"
+        android:paddingRight="10dp"
+        android:paddingLeft="10dp">
+
         <TableRow>
             <TextView
                 style = "@style/labels"
@@ -131,7 +136,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="right"
-        android:text = "@string/checkout">
+        android:layout_marginTop="10dp"
+        android:text = "@string/checkout"
+        >
 
     </Button>
 
