--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -30,7 +30,7 @@
         <item name = "android:layout_height"> wrap_content </item>
         <item name = "android:textColor">@color/purple</item>
         <item name = "android:textSize"> 18sp </item>
-        <item name = "android:layout_weight"> 2</item>
+        <item name = "android:layout_weight"> 3</item>
     </style>
 
     <style name = "cart_amounts">
@@ -38,8 +38,9 @@
         <item name = "android:textSize"> 18sp </item>
         <item name = "android:layout_width"> wrap_content </item>
         <item name = "android:layout_height"> wrap_content </item>
-        <item name = "android:textAlignment"> viewEnd </item>
-        <item name = "android:layout_weight"> 2</item>
+        <item name = "android:textAlignment"> textEnd </item>
+        <item name = "android:layout_weight"> 1</item>
+
     </style>
 
 </resources>
