--- a/app/src/main/res/layout/cart.xml
+++ b/app/src/main/res/layout/cart.xml
@@ -15,34 +15,40 @@
         android:textStyle="bold" >
     </TextView>
 
-    <LinearLayout
+    <TableLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="5px"
-        android:orientation="horizontal">
+        android:columnCount = "5">
+        <TableRow
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="5dp"
+        android:orientation="horizontal" >
+            <TextView
+                android:text="@string/item_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="3"
+                android:textSize="24sp"
+                android:textColor="@color/teal"/>
 
-        <TextView
-            android:text="@string/item_name"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:textSize="24sp"
-            android:textColor="@color/teal"/>
+            <TextView
+                android:text="@string/price"
+                android:layout_weight = "1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="24sp"
+                android:textColor="@color/teal"/>
 
-        <TextView
-            android:text="@string/price"
-            android:layout_width="80dp"
-            android:layout_height="wrap_content"
-            android:textSize="24sp"
-            android:textColor="@color/teal"/>
-
-        <TextView
-            android:text="@string/qty"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="24sp"
-            android:textColor="@color/teal"/>
-    </LinearLayout>
+            <TextView
+                android:text="@string/qty"
+                android:layout_weight = "1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="24sp"
+                android:textColor="@color/teal"/>
+        </TableRow>
+    </TableLayout>
 
     <ListView
         android:id="@+id/list"
