--- a/app/src/main/res/layout/cart.xml
+++ b/app/src/main/res/layout/cart.xml
@@ -62,22 +62,33 @@
         android:scrollbars="vertical">
     </ListView>
 
-    <!-- Calculate Button - Calculates Total Amount -->
-    <Button
-        android:id = "@+id/calculateBtn"
-        android:onClick="onClick"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text = "@string/calculate">
-    </Button>
 
     <TableLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:columnCount="4"
+        android:columnCount="5"
         android:paddingRight="10dp"
         android:paddingLeft="10dp">
+
+        <TableRow
+            android:layout_marginTop="10dp"
+            android:layout_width="match_parent"
+            android:gravity="center" >
+
+            <!-- Remove - Removes Item from Cart -->
+            <Button
+                android:id = "@+id/removeBtn"
+                android:onClick="onClick"
+                android:text = "@string/remove">
+            </Button>
+
+            <!-- Calculate Button - Calculates Total Amount -->
+            <Button
+                android:id = "@+id/calculateBtn"
+                android:onClick="onClick"
+                android:text = "@string/calculate">
+            </Button>
+        </TableRow>
 
         <TableRow>
             <TextView
@@ -131,11 +142,9 @@
                 android:id="@+id/total">
             </TextView>
         </TableRow>
-
     </TableLayout>
 
 
-    <!-- Checkout Button - opens Checkout Page -->
     <Button
         android:id = "@+id/chkoutBtn"
         android:onClick="onClick"
@@ -145,7 +154,6 @@
         android:layout_marginTop="10dp"
         android:text = "@string/checkout"
         >
-
     </Button>
 
 
