Changes made from remove to clear

--- a/app/src/main/res/layout/cart.xml
+++ b/app/src/main/res/layout/cart.xml
@@ -77,9 +77,9 @@
 
             <!-- Remove - Removes Item from Cart -->
             <Button
-                android:id = "@+id/removeBtn"
+                android:id = "@+id/clearBtn"
                 android:onClick="onClick"
-                android:text = "@string/remove">
+                android:text = "@string/clear">
             </Button>
 
             <!-- Calculate Button - Calculates Total Amount -->
